Created structure for multi-exp: folders and files.

--- a/.gitignore
+++ b/.gitignore
@@ -164,12 +164,18 @@ venv.bak/
 123
 123.py
 .idea
-data/nrn_pred/*
-!data/nrn_pred/.gitkeep
+data/raw/*
+!data/raw/.gitkeep
+data/ftr/*
+!data/ftr/.gitkeep
+data/plot/*
+!data/plot/.gitkeep
+data/result/*
+!data/result/.gitkeep
 log/*
 !log/.gitkeep
-data/nrn_model/*
-!data/nrn_model/.gitkeep
+data/model/*
+!data/model/.gitkeep
 net/*
 !net/.gitkeep
 .vscode
